--- a/index.html
+++ b/index.html
@@ -29,12 +29,24 @@
             <div style="text-align: center;">
                 <img id="myImage" src="assests/flower polarid.jpg" alt="flower polarid" width="300">
               </div>
+
+
+              <div style="text-align: center; margin-top: 20px;">
+                <button id="loadTextButton">Click to load message</button>
+                <p id="textOutput"></p>
+              </div>
               
 
 		</nav>
 		
 		
-		<article class="left"><p></p></article>
+		<article class="left">
+
+
+              
+
+
+        </article>
 		
 		
 		<footer><p></p></footer>
