--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div id="container">
 		
 	
-	<header><h1>Digital Junk Journal</h1></header>
+	<header><h1>Digital Journal</h1></header>
 		
 		<nav>
 	
@@ -43,7 +43,11 @@
 		<article class="left">
 
 
-              
+      <div style="text-align: center; margin-top: 30px;">
+        <button id="addEntryButton">Click to add journal entry.</button>
+        <p id="entryCount">Entries added: 0</p>
+        <div id="journalEntries" style="margin-top: 20px;"></div>
+      </div>      
 
 
         </article>
